fixed logo request in css
fix for logo when installed in subdirectory

--- a/templates/basic/css/style.css
+++ b/templates/basic/css/style.css
@@ -51,7 +51,7 @@ body {
 	background: #fff;
 }
 #logo {
-	background-image:url('/images/logo.png');
+	background-image:url('../../../images/logo.png');
 	background-position:center;
 	background-repeat:no-repeat;
 	width:100%;
